# operators

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.org  operators-config.cmake.in
operators/: .#specfunable.hpp  CMakeLists.txt  arithmetic.hpp  binary_operator_list.def  binary_specfun_list.def  clear_macros.hpp  comparable.hpp  compound_assignable.hpp  compound_assignment_operator_list.def  config.cpp  config.hpp.in  import.hpp  inequality.hpp  macros.hpp  operators-config.cmake.in  operators.hpp  ops.hpp  specfun.hpp  specfunable.hpp  unary_operator_list.def  unary_specfun_list.def
operators_testing/: CMakeLists.txt  arithmetic_test.cpp  comparable_test.cpp  inequality_test.cpp  ops_test.cpp  specfun_test.cpp  test_macros.hpp
